@@ -1,6 +1,0 @@
-<?xml version="1.0"?>
-<object name="portal_memberdata" meta_type="Plone Memberdata Tool">
- <property name="wysiwyg_editor" 
-           type="string"
-           purge="True"></property>
-</object>
